k8/stage/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: systemintelligencebackendapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: systemintelligencebackendapp
  template:
    metadata:
      labels:
        app: systemintelligencebackendapp
    spec:
      containers:
      - name: systemintelligencebackendapp
        image: issappacr.azurecr.io/si/system-intelligence-backend:2.2.8
        ports:
        - containerPort: 80
	      - secretRef:
            name: si-backend-secret
---
apiVersion: v1
kind: Service
metadata:
  name: systemintelligencebackendapp
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: systemintelligencebackendapp
