k8/stage/chromadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsupportchromadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productsupportchromadb
  template:
    metadata:
      labels:
        app: productsupportchromadb
    spec:
      containers:
      - name: productsupportchromadb
        image: chromadb/chroma:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: productsupportchromadb
spec:
  type: ClusterIP
  ports:
  - port: 8000
  selector:
    app: productsupportchromadb
